# zcvoter

./: CHANGELOG.md  flutter_launcher_icons.yaml  planning.md  pubspec.yaml
.github/workflows/: build-android.yml  build-linux.yml  build-mac.yml  build-win.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/me/hanh/zcvoter/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  router.dart  store.dart  store.g.dart  utils.dart
lib/pages/: add.dart  build.dart  delegate.dart  election.dart  home.dart  receive.dart  vote.dart
lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: election.dart  election.freezed.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/packaging/: zcvoter.appdata.xml
linux/packaging/deb/: make_config.yaml
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
macos/packaging/dmg/: make_config.yaml
misc/: app.json
rust/: Cargo.toml
rust/src/: directory.rs  election.rs  frb_generated.rs  lib.rs  sync.rs
rust/src/api/: election.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_zcvoter.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_zcvoter.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/packaging/exe/: make_config.yaml
windows/runner/: Runner.rc  main.cpp
