[package]
edition = "2021"
name = "rust_lib_zcvoter"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"

thiserror = "2.0"
anyhow = "1.0.97"
env_logger = "0.10"
hex = "0.4"
log = "0.4"
lazy_static = "1.5"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt", "json"]}
serde = "1.0"
serde_json = "1.0"

# rand = "0.9.0"
# rand_core = "0.6"

futures = "0.3"
sqlx = {version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"]}
tokio = {version = "1", features = ["rt", "rt-multi-thread", "macros"]}
reqwest = {version = "0.12", features = ["json", "rustls-tls"]}
rustls = {version = "0.23", default-features = false, features = ["ring"]}
libsqlite3-sys = { version = "0.28", features = ["bundled-sqlcipher-vendored-openssl"] }

bip39 = "2.1.0"
# rayon = "1.10"
# zcash_address = "0.7"
# zcash_encoding = "0.3"
# zcash_keys = {version = "0.8", features = ["sapling", "orchard", "transparent-inputs"]}
# zcash_note_encryption = "0.4"
zcash_primitives = "0.22"
# zcash_proofs = {version = "0.22", features = ["bundled-prover"]}
zcash_protocol = "0.5"
# zcash_transparent = {version = "0.2.3", features = ["transparent-inputs"]}
# zip321 = "0.3"

zcash-vote = {git = "https://github.com/hhanh00/zcash-vote", rev = "e4c3fd9705fa375e1623453cf93d866405422e56" }
#zcash-vote = {path = "../../zcash-vote"}

orchard = {version = "0.11", features = ["vote"]}

# bincode = {version = "2.0"}
# bip32 = {version = "0.6.0-pre.1", default-features = false}
# blake2b_simd = "1.0"
# bs58 = "0.5"
# chacha20 = "0.9"
# fpdec = "0.11"
# halo2_gadgets = "0.3"
# halo2_proofs = "0.3"
# jubjub = "0.10"
# pczt = {version = "0.2", features = ["zcp-builder", "io-finalizer", "prover", "signer", "spend-finalizer", "tx-extractor", "transparent", "sapling", "orchard"]}
# prost = "0.13.5"
# ripemd = "0.1"
# sapling-crypto = "0.5"
# secp256k1 = "0.29"
# sha2 = "0.10"
# tonic = {version = "0.13.0", features = ["tls-webpki-roots"]}

# itertools = "0.14"

# flate2 = "1.1"
# orion = "0.17"

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(frb_expand)']}

[build-dependencies]
tonic-build = "0.13"

[patch.crates-io]
orchard = {git = "https://github.com/hhanh00/orchard", rev = "09d63ba" }
